@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.648 2012/06/05 06:46:05 wiz Exp $
+# $NetBSD: Makefile,v 1.649 2012/06/05 07:01:52 wiz Exp $
 #
 
 COMMENT=	Packages to support the X window system
@@ -360,7 +360,6 @@ SUBDIR+=	tk-BWidget
 SUBDIR+=	tk-Tix
 SUBDIR+=	tkinfo
 SUBDIR+=	transset
-SUBDIR+=	transset-df
 SUBDIR+=	trapproto
 SUBDIR+=	tzosdclock
 SUBDIR+=	unclutter
