@@ -1,2 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2007/03/23 17:56:11 drochner Exp $
-bin/transset-df
