@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.1.1.1 2007/03/23 17:56:11 drochner Exp $
-
-SHA1 (transset-df-5.tar.gz) = c8ad58be3cb054f155c8a6d1c41f5ea5d060557b
-RMD160 (transset-df-5.tar.gz) = 28ff128d00e23601a4e911abaeca6a2db5691574
-Size (transset-df-5.tar.gz) = 10134 bytes
